First version with working frequency search.