@@ -10,7 +10,8 @@ import android.util.Log;
 public class Recorder extends Thread {
     private static final int AUDIO_SAMPLE_FREQ = 8000;
     
-    private short[] audioBuffer;
+    private byte[] audioBuffer;
+    private Short[] recordedSamples;
     private AudioRecord recorder;
     private TunerFragment t;
     private boolean recording = true;
@@ -18,7 +19,7 @@ public class Recorder extends Thread {
     public Recorder(TunerFragment t) {
         this.t = t;
         
-        int framePeriod = AUDIO_SAMPLE_FREQ / 16;
+        int framePeriod = AUDIO_SAMPLE_FREQ / 8;
         int bufferSize = framePeriod * 2;
 
         if (bufferSize < AudioRecord.getMinBufferSize(AUDIO_SAMPLE_FREQ,
@@ -41,7 +42,16 @@ public class Recorder extends Thread {
             e.printStackTrace();
         }
 
-        audioBuffer = new short[bufferSize/2];
+        audioBuffer = new byte[bufferSize / 2];
+        recordedSamples = new Short[audioBuffer.length / 2];
+    }
+    
+    public int getFrameSize() {
+        return recordedSamples.length;
+    }
+    
+    public int getSampleFreq() {
+        return AUDIO_SAMPLE_FREQ;
     }
     
     public synchronized void end() {
@@ -54,30 +64,39 @@ public class Recorder extends Thread {
         
         while (recording) {
             recorder.read(audioBuffer, 0, audioBuffer.length);
-            t.postRec(prepareResults(audioBuffer));
+            prepareResults(audioBuffer, recordedSamples);
+            t.postRec(recordedSamples);
         }
         
         recorder.stop();
         recorder.release();
     }
-
-    public static Short[] prepareResults(short[] b) {
-        Short[] f = new Short[b.length];
+    
+    public static void prepareResults(byte[] b, Short[] recs) {
+        for (int i = 0, j = 0; i < b.length; i += 2, j++) {
+            recs[j] = (short) ((b[i] << 8) | b[i+1]);
+        }
+    }
+    
+    /*
+    public static Double[] prepareResults(boolean[] b) {
+        Double[] f = new Double[b.length];
         
         for (int i = 0; i < b.length; i++) {
-            f[i] = new Short(b[i]);
+            f[i] = (double) (b[i] ? 1f : 0f);
         }
 
         return f;
     }
     
-    public static Short[] prepareResults(boolean[] b) {
-        Short[] f = new Short[b.length];
+    public static Double[] prepareResults(double[] b) {
+        Double[] f = new Double[b.length];
         
         for (int i = 0; i < b.length; i++) {
-            f[i] = new Short((short) (b[i] ? 2 : 0));
+            f[i] = Double.valueOf(b[i]);
         }
 
         return f;
     }
+    */
 }
